--- a/index.ipynb
+++ b/index.ipynb
@@ -443,10 +443,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "unique_countries"
+   ]
   },
   {
    "cell_type": "code",
