--- a/index.ipynb
+++ b/index.ipynb
@@ -447,7 +447,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "unique_countries 3['USA', 'Finland', 'Argentina','South Korea', 'Morocco',# 'Croaia], 'Mexico', 'Malta', 'italy', '"
+    "unique_countries 3['USA', 'Finland', 'Argentina','South Korea', 'Morocco',# 'Croaia], 'Mexico', 'Malta', 'italy', 'Canada'"
    ]
   },
   {
