--- a/index.ipynb
+++ b/index.ipynb
@@ -443,11 +443,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-30-28819f1b3139>, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-30-28819f1b3139>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    unique_countries 3['USA', 'Finland', 'Argentina','South Korea', 'Morocco',# 'Croaia], 'Mexico', 'Malta', 'italy', 'Canada']\u001b[0m\n\u001b[0m                     ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
-    "unique_countries 3['USA', 'Finland', 'Argentina','South Korea', 'Morocco',# 'Croaia], 'Mexico', 'Malta', 'italy', 'Canada'"
+    "unique_countries 3['USA', 'Finland', 'Argentina','South Korea', 'Morocco',# 'Croaia], 'Mexico', 'Malta', 'italy', 'Canada']"
    ]
   },
   {
